Исправлена вложенность элемента

--- a/index.html
+++ b/index.html
@@ -146,9 +146,11 @@
           </h2>
           <div class="content__text-block">
             <ul class="content__articles">
-              <p class="conent__article-subtitle title-decor">
-                5 простых (на самом деле не очень) советов
-              </p>
+              <li class="content__articles-item">
+                <p class="conent__article-subtitle title-decor">
+                  5 простых (на самом деле не очень) советов
+                </p>
+              </li>
               <li class="content__articles-item">
                 <h3 class="content__subtitle title-decor title-decor--accent">
                   Представьте небо и облака
