Отработаны замечания по ревью №1

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Сложно сосредоточиться</title>
     <link rel="icon" href="./images/favicon.ico" sizes="any" />
     <link rel="icon" href="./images/favicon.svg" type="images/svg+xml" />
-    <link rel="mobile-icon" href="./images/mobile-icon.png" />
+    <link rel="apple-touch-icon" href="./images/mobile-icon.png" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
@@ -44,10 +44,7 @@
           </li>
         </ul>
       </nav>
-      <div class="header__decoration" aria-hidden="true">
-        <p class="header__decoration-text"></p>
-        REC
-      </div>
+      <span class="header__decoration" aria-hidden="true"> rec </span>
       <h1 class="header__title">no focus</h1>
       <p class="header__text title-decor">
         Что делать, когда не можешь делать ничего <br />
@@ -56,12 +53,12 @@
     </header>
     <main class="content content-section">
       <section class="content__text-block">
-        <article class="content__block">
+        <article class="content__block section__why">
           <h2 class="content__title">Почему сосредоточиться так сложно</h2>
           <div class="content__text-block">
             <ul class="content__articles">
               <li class="content__articles-item">
-                <h3 class="content__subtitle title-decor">Многозадачность</h3>
+                <h4 class="content__subtitle title-decor">Многозадачность</h4>
                 <p class="content__text">
                   Особенно сложно сосредоточиться, когда задач много и все они —
                   важные. Где же легендарная многозадачность, когда она так
@@ -81,7 +78,7 @@
                 </p>
               </li>
               <li class="content__articles-item">
-                <h3 class="content__subtitle title-decor">Дофамин</h3>
+                <h4 class="content__subtitle title-decor">Дофамин</h4>
                 <p class="content__text">
                   С гормонами стресса всё понятно, но дальше — ещё интереснее. В
                   нашей невозможности сосредоточиться замешана и полная
@@ -97,64 +94,60 @@
             </ul>
           </div>
         </article>
-        <article class="content__block">
+        <article class="content__block section__causes">
           <h2 class="content__title">Что снижает концентрацию внимания?</h2>
-          <div class="content__text-block">
-            <ul class="content__articles">
-              <li class="content__articles-item">
-                <h3 class="content__subtitle title-decor">Многозадачность</h3>
-                <p class="content__text">
-                  Как концентрация может снижаться из-за… концентрации? Любая
-                  стрессовая ситуация (и резко меняющийся мир в целом)
-                  заставляет наш мозг постоянно «сканировать» окружающую среду
-                  на предмет опасности. Например, читать новости вместо работы.
-                  Но быть собранными всё время — невозможно. Концентрация —
-                  мышца, и она может не выдержать, если не давать ей отдохнуть.
-                </p>
-              </li>
-              <li class="content__articles-item">
-                <h3 class="content__subtitle title-decor">Еда</h3>
-                <p class="content__text">
-                  «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
-                  доставляют в мозг энергию и помогают ему лучше работать. Но
-                  уходит эта энергия также быстро, как и приходит. А мы в
-                  результате попадаем на «углеводные качели»: как только
-                  действие «быстрых углеводов» заканчивается, мы чувствуем
-                  усталость и сонливость. И хотим ещё больше быстрых углеводов.
-                </p>
-              </li>
-              <li class="content__articles-item">
-                <h3 class="content__subtitle title-decor">Гаджеты</h3>
-                <p class="content__text">
-                  Да-да, это та самая ситуация, когда на экране ноутбука — код,
-                  в наушниках — подкаст, а на компьютере фоном — ещё и видео с
-                  забавными утятами. В результате мозг пытается переключиться с
-                  одной задачи на другую — и просто не может. А чтобы вернуться
-                  к состоянию полной концентрации, человеку в среднем нужно 20
-                  минут. Вот и получается, что чем больше времени мы проводим в
-                  гаджетах, тем больше времени затем нужно, чтобы вернуться к
-                  работе.
-                </p>
-              </li>
-            </ul>
-          </div>
+          <ul class="content__articles">
+            <li class="content__articles-item">
+              <h4 class="content__subtitle title-decor">Многозадачность</h4>
+              <p class="content__text">
+                Как концентрация может снижаться из-за… концентрации? Любая
+                стрессовая ситуация (и резко меняющийся мир в целом) заставляет
+                наш мозг постоянно «сканировать» окружающую среду на предмет
+                опасности. Например, читать новости вместо работы. Но быть
+                собранными всё время — невозможно. Концентрация — мышца, и она
+                может не выдержать, если не давать ей отдохнуть.
+              </p>
+            </li>
+            <li class="content__articles-item">
+              <h4 class="content__subtitle title-decor">Еда</h4>
+              <p class="content__text">
+                «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+                доставляют в мозг энергию и помогают ему лучше работать. Но
+                уходит эта энергия также быстро, как и приходит. А мы в
+                результате попадаем на «углеводные качели»: как только действие
+                «быстрых углеводов» заканчивается, мы чувствуем усталость и
+                сонливость. И хотим ещё больше быстрых углеводов.
+              </p>
+            </li>
+            <li class="content__articles-item">
+              <h4 class="content__subtitle title-decor">Гаджеты</h4>
+              <p class="content__text">
+                Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+                наушниках — подкаст, а на компьютере фоном — ещё и видео с
+                забавными утятами. В результате мозг пытается переключиться с
+                одной задачи на другую — и просто не может. А чтобы вернуться к
+                состоянию полной концентрации, человеку в среднем нужно 20
+                минут. Вот и получается, что чем больше времени мы проводим в
+                гаджетах, тем больше времени затем нужно, чтобы вернуться к
+                работе.
+              </p>
+            </li>
+          </ul>
         </article>
-        <article class="content__block">
+        <article class="content__block section__advices">
           <h2 class="content__title">
             Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
             секунд)
           </h2>
           <div class="content__text-block">
+            <h3 class="conent__article-subtitle title-decor">
+              5 простых (на самом деле не очень) советов
+            </h3>
             <ul class="content__articles">
               <li class="content__articles-item">
-                <p class="conent__article-subtitle title-decor">
-                  5 простых (на самом деле не очень) советов
-                </p>
-              </li>
-              <li class="content__articles-item">
-                <h3 class="content__subtitle title-decor title-decor--accent">
+                <h4 class="content__subtitle title-decor title-decor--accent">
                   Представьте небо и облака
-                </h3>
+                </h4>
                 <p class="content__text">
                   Или листья в ручье. Тут дело в лёгкой медитации, которая
                   помогает успокоиться. Ведь часто именно тревожные мысли о
@@ -168,9 +161,9 @@
                 </p>
               </li>
               <li class="content__articles-item">
-                <h3 class="content__subtitle title-decor title-decor--accent">
+                <h4 class="content__subtitle title-decor title-decor--accent">
                   Включите музыку
-                </h3>
+                </h4>
                 <p class="content__text">
                   Но не любую, и не любимую. Любимая может быть связана с
                   сильными положительными эмоциями, которые тоже очень сильно
@@ -180,9 +173,9 @@
                 </p>
               </li>
               <li class="content__articles-item">
-                <h3 class="content__subtitle title-decor title-decor--accent">
+                <h4 class="content__subtitle title-decor title-decor--accent">
                   Прогуляйтесь
-                </h3>
+                </h4>
                 <p class="content__text">
                   Или даже пробегитесь. Лучше найти парк или лес: один
                   эксперимент
@@ -201,9 +194,9 @@
                 </p>
               </li>
               <li class="content__articles-item">
-                <h3 class="content__subtitle title-decor title-decor--accent">
+                <h4 class="content__subtitle title-decor title-decor--accent">
                   Хорошо ешьте
-                </h3>
+                </h4>
                 <p class="content__text">
                   Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
                   которые препятствуют резким скачкам сахара в крови. Например,
@@ -213,9 +206,9 @@
                 </p>
               </li>
               <li class="content__articles-item">
-                <h3 class="content__subtitle title-decor title-decor--accent">
+                <h4 class="content__subtitle title-decor title-decor--accent">
                   Читайте
-                </h3>
+                </h4>
                 <p class="content__text">
                   Настоящие бумажные книги. Это правда помогает с концентрацией:
                   чтобы прочитать пост в соцсети, достаточно нескольких минут
